--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:    	SeaMonster Studios Headless (Child theme)
+Theme Name:    	ChildThemeName
 Description: 		Used in conjunction with a javascript-based frontend that 
                 consumes the CMS data via API
 Version: 				1.0.0
